# Shape-Wars

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
config/entities/: bouncer.json  chaser.json  player.json  shooter.json
src/: CMakeLists.txt  main.cpp
src/BulletManager/: Bullet.hpp  BulletManager.cpp  BulletManager.hpp
src/BulletManager/GenericBullet/: GenericBullet.cpp  GenericBullet.hpp
src/BulletManager/PlayerBullet/: PlayerBullet.cpp  PlayerBullet.hpp
src/Components/BulletComponent/: BulletComponent.hpp
src/Components/RotationComponent/: RotationComponent.hpp
src/Components/ShootComponent/: ShootComponent.hpp
src/Core/EntityManager/: Entity.hpp  EntityManager.hpp
src/Core/Game/: Game.cpp  Game.hpp  RenderContext.hpp
src/Core/SceneManager/: Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneTransition.hpp
src/Enemies/Bouncer/: Bouncer.cpp  Bouncer.hpp
src/Enemies/Chaser/: Chaser.cpp  Chaser.hpp
src/Enemies/Shooter/: Shooter.cpp  Shooter.hpp
src/EntityManager/: Clump.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntitySpec.hpp  WaveSpecification.hpp
src/Player/: Player.cpp  Player.hpp
src/Scenes/: GameScene.cpp  GameScene.hpp  SceneID.hpp
src/Scenes/GameScene/: GameScene.cpp  GameScene.hpp
src/Systems/BulletSystem/: BulletSystem.cpp  BulletSystem.hpp
src/Systems/RotationSystem/: RotationSystem.cpp  RotationSystem.hpp
src/Utils/: Damage.hpp
src/WaveManager/: WaveManager.cpp  WaveManager.hpp
src/WaveSpawner/: WaveSpawner.cpp  WaveSpawner.hpp
